--- a/wishlist.html
+++ b/wishlist.html
@@ -144,7 +144,7 @@
                             </div>
                             <div class="col-6">
                                 <button class="btn rounded-5 btn-outline-primary w-100 py-3 mb-2">
-                                    See Cheaper Prices
+                                    See Cheaper Prices.
                                 </button>
                             </div>
                             <div class="col-6">
