--- a/home.html
+++ b/home.html
@@ -39,18 +39,20 @@
 
                     <li class="nav-item fs-6   fw-medium">
                         <a class="nav-link active pe-5  text-info   link-offset-3-hover" aria-current="page"
-                            href="">Home</a>
+                            href="./home.html">Home</a>
                     </li>
                     <li class="nav-item fs-6  fw-medium">
                         <a class="nav-link pe-5 text-info   link-offset-3-hover " aria-current="page"
-                            href="#">package</a>
+                            href="./pactag.html">package</a>
                     </li>
                     <li class="nav-item fs-6  fw-medium">
-                        <a class="nav-link pe-5   text-info   link-offset-3-hover " aria-current="page" href="#">Our
+                        <a class="nav-link pe-5   text-info   link-offset-3-hover " aria-current="page"
+                            href="./oursevices.html">Our
                             Service</a>
                     </li>
                     <li class="nav-item fs-6  fw-medium">
-                        <a class="nav-link pe-5 text-info    link-offset-3-hover" aria-current="page" href="#">about
+                        <a class="nav-link pe-5 text-info    link-offset-3-hover" aria-current="page"
+                            href="./aboutus.html">about
                             us</a>
                     </li>
 
@@ -1438,28 +1440,32 @@
                 <div class="d-flex flex-row justify-content-end mt-5">
                     <p class="mt-3 fw-bold textColor">Follow us: </p>
                     <div class="d-flex justify-content-between align-items-center">
-                        <button class="btn rounded-5" >
+                        <button class="btn rounded-5">
 
-                            <a href="https://www.facebook.com/" target="_blank" style="font-size:24px ; color: hsl(240, 62%, 59%);">
-                            <i style='font-size:24px' class='fab'>&#xf082;</i>
+                            <a href="https://www.facebook.com/" target="_blank"
+                                style="font-size:24px ; color: hsl(240, 62%, 59%);">
+                                <i style='font-size:24px' class='fab'>&#xf082;</i>
                             </a>
                         </button>
 
                         <button class="btn rounded-5">
-                            <a href="https://www.youtube.com" target="_blank" style="font-size:24px ; color: rgb(158, 123, 36);">
-                            
-                            <i style='font-size:24px' class='fab'>&#xf36c;</i>
+                            <a href="https://www.youtube.com" target="_blank"
+                                style="font-size:24px ; color: rgb(158, 123, 36);">
+
+                                <i style='font-size:24px' class='fab'>&#xf36c;</i>
                             </a>
                         </button>
-                        <button class="btn rounded-5" >
-                            <a href="https://www.linkedin.com/feed/" target="_blank" style="font-size:24px ; color: rgb(33, 33, 171);">
-                            <i style='font-size:24px' class='fab'>&#xf08c;</i>
-                        </a>
+                        <button class="btn rounded-5">
+                            <a href="https://www.linkedin.com/feed/" target="_blank"
+                                style="font-size:24px ; color: rgb(33, 33, 171);">
+                                <i style='font-size:24px' class='fab'>&#xf08c;</i>
+                            </a>
                         </button>
                         <button class="btn rounded-5" \>
-                            <a href="mailto: magdyshata35@gmail.com" target="_blank" style="font-size:24px ; color: rgb(233, 41, 41);">
-                            <i style='font-size:24px' class='fab'>&#xf1a0;</i>
-                        </a>
+                            <a href="mailto: magdyshata35@gmail.com" target="_blank"
+                                style="font-size:24px ; color: rgb(233, 41, 41);">
+                                <i style='font-size:24px' class='fab'>&#xf1a0;</i>
+                            </a>
                         </button>
 
                     </div>
