--- a/wishlist.html
+++ b/wishlist.html
@@ -43,7 +43,7 @@
                     </li>
                     <li class="nav-item fs-6  fw-medium">
                         <a class="nav-link pe-5 text-info   link-offset-3-hover " aria-current="page"
-                            href="#">package</a>
+                            href="./p">package</a>
                     </li>
                     <li class="nav-item fs-6  fw-medium">
                         <a class="nav-link pe-5   text-info   link-offset-3-hover " aria-current="page" href="#">Our
@@ -281,6 +281,11 @@
                 </div>
 
             </div>
+
+
+            <button class=" btn subscribe my-2 rounded-pill textColor"> Email@yourmail.com*
+                <a href="/docs/5.3/examples/" class="btn btn-primary  px-3  ms-5 me-0 rounded-pill">Download</a>
+            </button>
         </div>
 
     </main>
