--- a/wishlist.html
+++ b/wishlist.html
@@ -43,14 +43,16 @@
                     </li>
                     <li class="nav-item fs-6  fw-medium">
                         <a class="nav-link pe-5 text-info   link-offset-3-hover " aria-current="page"
-                            href="./p">package</a>
+                            href="./pactag.html">package</a>
                     </li>
                     <li class="nav-item fs-6  fw-medium">
-                        <a class="nav-link pe-5   text-info   link-offset-3-hover " aria-current="page" href="#">Our
+                        <a class="nav-link pe-5   text-info   link-offset-3-hover " aria-current="page"
+                            href="./oursevices.html">Our
                             Service</a>
                     </li>
                     <li class="nav-item fs-6  fw-medium">
-                        <a class="nav-link pe-5 text-info    link-offset-3-hover" aria-current="page" href="#">about
+                        <a class="nav-link pe-5 text-info    link-offset-3-hover" aria-current="page"
+                            href="./aboutus.html">about
                             us</a>
                     </li>
 
@@ -93,9 +95,9 @@
         <hr class="col-11 textColor">
     </div>
 
- 
-     <div class="container-fluid vh-100" style="margin-top:180px">
-        <div >
+
+    <div class="container-fluid vh-100" style="margin-top:180px">
+        <div>
             <div class="rounded d-flex justify-content-center">
                 <div class="col-6">
                     <div class="text-center">
@@ -104,14 +106,12 @@
                     <div class="p-4">
                         <label for="name">Name</label>
                         <div class="input-group  mb-3">
-                            <span class="input-group-text rounded-start-5"><i
-                                    class="fa-solid fa-person "></i></span>
+                            <span class="input-group-text rounded-start-5"><i class="fa-solid fa-person "></i></span>
                             <input type="text" class="form-control rounded-end-5" placeholder="Your name">
                         </div>
                         <label for="email">Email</label>
                         <div class="input-group mb-3">
-                            <span class="input-group-text rounded-start-5"><i
-                                    class="fa-solid fa-envelope "></i></span>
+                            <span class="input-group-text rounded-start-5"><i class="fa-solid fa-envelope "></i></span>
                             <input type="email" class="form-control rounded-end-5" placeholder="Email">
                         </div>
                         <label for="phone">Phone Number</label>
@@ -252,28 +252,32 @@
                 <div class="d-flex flex-row justify-content-end mt-5">
                     <p class="mt-3 fw-bold textColor">Follow us: </p>
                     <div class="d-flex justify-content-between align-items-center">
-                        <button class="btn rounded-5" >
+                        <button class="btn rounded-5">
 
-                            <a href="https://www.facebook.com/" target="_blank" style="font-size:24px ; color: hsl(240, 62%, 59%);">
-                            <i style='font-size:24px' class='fab'>&#xf082;</i>
+                            <a href="https://www.facebook.com/" target="_blank"
+                                style="font-size:24px ; color: hsl(240, 62%, 59%);">
+                                <i style='font-size:24px' class='fab'>&#xf082;</i>
                             </a>
                         </button>
 
                         <button class="btn rounded-5">
-                            <a href="https://www.youtube.com" target="_blank" style="font-size:24px ; color: rgb(158, 123, 36);">
-                            
-                            <i style='font-size:24px' class='fab'>&#xf36c;</i>
+                            <a href="https://www.youtube.com" target="_blank"
+                                style="font-size:24px ; color: rgb(158, 123, 36);">
+
+                                <i style='font-size:24px' class='fab'>&#xf36c;</i>
                             </a>
                         </button>
-                        <button class="btn rounded-5" >
-                            <a href="https://www.linkedin.com/feed/" target="_blank" style="font-size:24px ; color: rgb(33, 33, 171);">
-                            <i style='font-size:24px' class='fab'>&#xf08c;</i>
-                        </a>
+                        <button class="btn rounded-5">
+                            <a href="https://www.linkedin.com/feed/" target="_blank"
+                                style="font-size:24px ; color: rgb(33, 33, 171);">
+                                <i style='font-size:24px' class='fab'>&#xf08c;</i>
+                            </a>
                         </button>
                         <button class="btn rounded-5" \>
-                            <a href="mailto: magdyshata35@gmail.com" target="_blank" style="font-size:24px ; color: rgb(233, 41, 41);">
-                            <i style='font-size:24px' class='fab'>&#xf1a0;</i>
-                        </a>
+                            <a href="mailto: magdyshata35@gmail.com" target="_blank"
+                                style="font-size:24px ; color: rgb(233, 41, 41);">
+                                <i style='font-size:24px' class='fab'>&#xf1a0;</i>
+                            </a>
                         </button>
 
                     </div>
