--- a/blogpage.html
+++ b/blogpage.html
@@ -18,7 +18,73 @@
 
 <body>
 
+    <nav class="navbar navbar-expand-lg fixed-top     z-3 mp-3 ">
+        <div class="container-xl">
+            <a class="icon-link fs-5  fw-bolder icon-link-hover" href="#">
+                Tygo
 
+            </a>
+            <button class="navbar-toggler bg-info border-white shadow-none" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <i class="fa-solid fa-bars fa-1x  bg-info a "></i>
+
+            </button>
+            <div class="collapse navbar-collapse " id="navbarSupportedContent">
+                <ul class="navbar-nav NAVITEM   pt-2  ">
+
+
+                    <li class="nav-item fs-6   fw-medium">
+                        <a class="nav-link active pe-5  text-info   link-offset-3-hover" aria-current="page"
+                            href="./home.html">Home</a>
+                    </li>
+                    <li class="nav-item fs-6  fw-medium">
+                        <a class="nav-link pe-5 text-info   link-offset-3-hover " aria-current="page"
+                            href="./pactag.html">package</a>
+                    </li>
+                    <li class="nav-item fs-6  fw-medium">
+                        <a class="nav-link pe-5   text-info   link-offset-3-hover " aria-current="page"
+                            href="./oursevices.html">Our
+                            Service</a>
+                    </li>
+                    <li class="nav-item fs-6  fw-medium">
+                        <a class="nav-link pe-5 text-info    link-offset-3-hover" aria-current="page"
+                            href="./aboutus.html">about
+                            us</a>
+                    </li>
+
+                    <li class="nav-item fs-6  fw-medium">
+                        <a class="nav-link pe-5 text-info   link-offset-3-hover " aria-current="page"
+                            href="./blog.html">blog</a>
+                    </li>
+
+
+
+                    <li>
+                        <button type="button" onclick="myFunction()" class=" btn">
+                            <span class="  " id="theme"></span>
+                            <span class="ms-1">
+                                <i class="fa-solid fa-sun"></i>
+                            </span>
+                        </button>
+                    </li>
+
+
+
+                    <li>
+                        <button type="button"
+                            class="btn btn-outline-info bg-light-subtle rounded-pill ms-1  py-1 mt-1 ">
+                            <i class="fa-solid fa-user"></i>
+                            log in
+                        </button>
+                    </li>
+                </ul>
+
+
+
+            </div>
+        </div>
+    </nav>
     
 
 
