--- a/comparone.html
+++ b/comparone.html
@@ -93,8 +93,8 @@
     <script src="fontawesome-free-6.4.2-web/js/all.js"></script>
     <script src="fontawesome-free-6.4.2-web/js/all.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
-<script src="./js"></script>
 
+<script src="./script.js"></script>
 </body>
 
 </html>
