--- a/blogpage.html
+++ b/blogpage.html
@@ -4,16 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-
-
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     <link rel="stylesheet" href="fontawesome-free-6.4.2-web/css/all.css">
     <link rel="stylesheet" href="fontawesome-free-6.4.2-web/css/all.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css.map">
     <link rel="stylesheet" href="css/bootstrap.min.css">
 
     <link rel="stylesheet" href="style.css">
-    <title>progect-one </title>
+    <title>TYGO | BlogPage </title>
 </head>
 
 <body>
@@ -40,7 +38,7 @@
                     </li>
                     <li class="nav-item fs-6  fw-medium">
                         <a class="nav-link pe-5 text-info   link-offset-3-hover " aria-current="page"
-                            href="./pactag.html">package</a>
+                            href="./package.html">package</a>
                     </li>
                     <li class="nav-item fs-6  fw-medium">
                         <a class="nav-link pe-5   text-info   link-offset-3-hover " aria-current="page"
@@ -87,13 +85,289 @@
     </nav>
     
 
+<div class="container text-center" style="margin-top: 180px;">
+    <div class="row justify-content-center">
+        <div class="col-12">
+            <h1 class="mb-3 textColor">How to use ESIM?</h1>
+            <img src="./images/use-Esim.png" class="img-fluid rounded-1 mb-2  w-100 " alt="">           
+        </div>
+        <div class="col-lg-8">
+            <p class="lead text-start mb-1">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto cum quo odio vero officiis consectetur, nesciunt excepturi corporis voluptatem aliquam doloremque alias earum repudiandae perferendis tempore, velit atque at? Quae quaerat labore recusandae libero quisquam ratione beatae magni? Quaerat, ullam?</p>
+            <p class="lead text-start mb-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, optio voluptate. Necessitatibus quod dolorum assumenda error omnis facere libero autem perferendis illo! Obcaecati repellendus ad excepturi voluptates voluptatibus quibusdam, amet ex voluptatum pariatur, veniam tempora labore placeat ipsa nemo. Saepe optio debitis porro cumque, ad veniam facere vero. Suscipit, veritatis vel. Repudiandae, provident numquam suscipit quibusdam accusamus impedit minima aspernatur doloribus facere deserunt nobis optio tenetur? Omnis similique atque dignissimos est ab numquam quibusdam veritatis voluptatem totam, soluta nisi consequuntur.</p>
+        </div>
+    </div>
+</div>
+<div class="container mt-5">
+    <div class="row justify-content-between">
+        <div class="col-md-6 col-lg-3">
+            <div class="card border-0">
+                <img class="bd-placeholder-img card-img-top rounded-2" width="100%" height="225"
+                    src="./images/photo-1510557880182-3d4d3cba35a5.avif" alt="img" >
+                <div class="card-body px-0">
+                    <h5 class="card-title textColor">Purchase eSIM</h5>
+                    <p class="card-text  fw-normal textColor">This is a wider card with supporting text below as
+                        a natural lead-in to
+                        additional content. This content is a little bit longer.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6 col-lg-3">
+            <div class="card border-0">
+                <img class="bd-placeholder-img card-img-top rounded-2" width="100%" height="225"
+                    src="./images/photo-1512941937669-90a1b58e7e9c.avif" alt="img" >
+                <div class="card-body">
+                    <h5 class="card-title textColor">Install</h5>
+                    <p class="card-text  fw-normal textColor">This is a wider card with supporting text below as
+                        a natural lead-in to
+                        additional content. This content is a little bit longer.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6 col-lg-3">
+            <div class="card border-0">
+                <img class="bd-placeholder-img card-img-top rounded-2" width="100%" height="225"
+                    src="./images/photo-1526045612212-70caf35c14df.avif" alt="img" >
+                <div class="card-body px-0">
+                    <h5 class="card-title textColor">Set a vacation time</h5>
+                    <p class="card-text  fw-normal textColor">This is a wider card with supporting text below as
+                        a natural lead-in to
+                        additional content. This content is a little bit longer.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6 col-lg-3">
+            <div class="card border-0">
+                <img class="bd-placeholder-img card-img-top rounded-2" width="100%" height="225"
+                    src="./images/photo-1595121766249-ee5532be40cb.avif" alt="img" >
+                <div class="card-body px-0">
+                    <h5 class="card-title textColor">Active & Connect</h5>
+                    <p class="card-text  fw-normal textColor">This is a wider card with supporting text below as
+                        a natural lead-in to
+                        additional content. This content is a little bit longer.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-lg-8">
+            <h3 class="textColor">1. Make it easy to contact you</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, dolorem excepturi recusandae tenetur cum accusantium maiores et corporis suscipit delectus assumenda consequatur nobis maxime officiis itaque sequi laudantium quos sapiente dolores optio fuga dolore perspiciatis. Eos vero impedit sequi quas?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, dolorem excepturi recusandae tenetur cum accusantium maiores et corporis suscipit delectus assumenda consequatur nobis maxime officiis itaque sequi laudantium quos sapiente dolores optio fuga dolore perspiciatis. Eos vero impedit sequi quas?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, dolorem excepturi recusandae tenetur cum accusantium maiores et corporis suscipit delectus assumenda consequatur nobis maxime officiis itaque sequi laudantium quos sapiente dolores optio fuga dolore perspiciatis. Eos vero impedit sequi quas?</p>
+        </div>
+    </div>
+</div>
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-lg-8">
+           <div class="row justify-content-between" >
+            <div class="col-md-6">
+                <h3 class="textColor">2. Empower your employee</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, dolorem excepturi recusandae tenetur cum accusantium maiores et corporis suscipit delectus assumenda consequatur nobis maxime officiis itaque sequi laudantium quos sapiente dolores optio fuga dolore perspiciatis. Eos vero impedit sequi quas?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, dolorem excepturi recusandae tenetur cum accusantium maiores et corporis suscipit quas?</p>
+            </div>
+            <div class="col-md-4">
+                <img src="./images/photo-1534073828943-f801091bb18c.avif" class="img-fluid rounded-2" alt="" style="height: 270px; width: 270px;">
+            </div>
+           </div>
+        </div>
+    </div>
+</div>
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-12">
+            <h2 class="textColor mb-5"> Recommended Reading</h2>
+            <div class="swiper mySwiper teams ">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <div class="card new-shadow border-0 p-2" style="width:360px;">
+                            <img class="bd-placeholder-img card-img-top rounded-2" 
+                                src="./images/istockphoto-1435220822-612x612.webp" alt="img">
+                            <div class="card-body">
+                                <h5 class="card-title textColor">how to use ESIM?</h5>
+                                <p class="card-text  fw-normal textColor">This is a wider card with supporting text below as
+                                    a natural lead-in to
+                                    additional content. This content is a little bit longer.</p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="btn-group">
+                                        <button type="button" class="btn ">
+                                            <a href="./blogpage.html" class="textColor  fw-bold text-decoration-none">Read More
+                                                <i class="fa-solid fa-arrow-right"></i>
+                                            </a>
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="card new-shadow border-0 p-2" style="width:360px;">
+                             <img class="bd-placeholder-img card-img-top rounded-2"   
+                                src="./images/man-791049_640.jpg" alt="img">
+                            <div class="card-body">
+                                <h5 class="card-title textColor">how to use ESIM?</h5>
+                                <p class="card-text  fw-normal textColor">This is a wider card with supporting text below as
+                                    a natural lead-in to
+                                    additional content. This content is a little bit longer.</p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="btn-group">
+                                        <button type="button" class="btn ">
+                                            <a href="./blogpage.html" class="textColor  fw-bold text-decoration-none">Read More
+                                                <i class="fa-solid fa-arrow-right"></i>
+                                            </a>
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="card new-shadow border-0 p-2" style="width:360px;">
+                            <img class="bd-placeholder-img card-img-top rounded-2" 
+                                src="./images/office-620822_1280.jpg" alt="img">
+                            <div class="card-body">
+                                <h5 class="card-title textColor">how to use ESIM?</h5>
+                                <p class="card-text  fw-normal textColor">This is a wider card with supporting text below as
+                                    a natural lead-in to
+                                    additional content. This content is a little bit longer.</p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="btn-group">
+                                        <button type="button" class="btn ">
+                                            <a href="./blogpage.html" class="textColor  fw-bold text-decoration-none">Read More
+                                                <i class="fa-solid fa-arrow-right"></i>
+                                            </a>
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="card new-shadow border-0 p-2" style="width:360px;">
+                            <img class="bd-placeholder-img card-img-top rounded-2" 
+                                src="./images/hands-820272_640.jpg" alt="img">
+                            <div class="card-body">
+                                <h5 class="card-title textColor">how to use ESIM?</h5>
+                                <p class="card-text  fw-normal textColor">This is a wider card with supporting text below as
+                                    a natural lead-in to
+                                    additional content. This content is a little bit longer.</p>
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <div class="btn-group">
+                                        <button type="button" class="btn ">
+                                            <a href="./blogpage.html" class="textColor  fw-bold text-decoration-none">Read More
+                                                <i class="fa-solid fa-arrow-right"></i>
+                                            </a>
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
-
-
+                </div>
+                <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="text-center mt-5 container mx-auto">
+    <hr class="col-11 textColor">
+</div>
+<!-- footer -->
+<footer class="my-5 container mx-auto">
+    <div class="row justify-content-between align-items-center">
+        <div class="col-lg-5">
+            <h3 class=" fs-4 textColor ms-1 fw-bold">Subscribe to our newsletter </h3>
+            <button class=" btn subscribe my-2 rounded-pill textColor"> Email@yourmail.com*
+                <a href="/docs/5.3/examples/" class="btn btn-primary  px-3  ms-5 me-0 rounded-pill">Download</a>
+            </button>
+            <div class="mt-5">
+                <ul class="list-unstyled d-flex ms-1">
+                    <li>
+                        <a class="icon-link mb-1 me-2" href="#" rel="noopener" target="_blank"> Term
+                        </a>
+                    </li>
+                    <li class="me-2 textColor"> | </li>
+                    <li>
+                        <a class="icon-link mb-1" href="#" rel="noopener" target="_blank"> Privacy
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="col-lg-7">
+            <ul class="list-unstyled ps-1">
+                <div class="d-flex flex-wrap py-5 mb-5">
+                    <li>
+                        <a class="icon-link mb-1 me-4" href="./home.html">
+                            Home
+                        </a>
+                    </li>
+                    <li>
+                        <a class="icon-link mb-1 me-4" href="./aboutus.html">
+                            About us
+                        </a>
+                    </li>
+                    <li>
+                        <a class="icon-link mb-1 me-4" href="./package.html">
+                            Packages
+                        </a>
+                    </li>
+                    <li>
+                        <a class="icon-link mb-1 me-4" href="./blog.html">
+                            Blog
+                        </a>
+                    </li>
+                    <li>
+                        <a class="icon-link mb-1 me-4" href="./oursevices.html">
+                            Our Service
+                        </a>
+                    </li>
+                    <li>
+                        <a class="icon-link mb-1" href="./waitingList.html">
+                            Contact
+                        </a>
+                    </li>
+            </ul>
+            <div class="d-flex flex-row justify-content-end mt-5">
+                <p class="mt-3 fw-bold textColor">Follow us: </p>
+                <div class="d-flex justify-content-between align-items-center">
+                    <button class="btn rounded-5">
+                        <a href="https://www.facebook.com/" target="_blank"
+                            style="font-size:24px ; color: hsl(240, 62%, 59%);">
+                            <i style='font-size:24px' class='fab'>&#xf082;</i>
+                        </a>
+                    </button>
+                    <button class="btn rounded-5">
+                        <a href="https://www.youtube.com" target="_blank"
+                            style="font-size:24px ; color: rgb(158, 123, 36);">
+                            <i style='font-size:24px' class='fab'>&#xf36c;</i>
+                        </a>
+                    </button>
+                    <button class="btn rounded-5">
+                        <a href="https://www.linkedin.com/feed/" target="_blank"
+                            style="font-size:24px ; color: rgb(33, 33, 171);">
+                            <i style='font-size:24px' class='fab'>&#xf08c;</i>
+                        </a>
+                    </button>
+                    <button class="btn rounded-5" \>
+                        <a href="mailto: magdyshata35@gmail.com" target="_blank"
+                            style="font-size:24px ; color: rgb(233, 41, 41);">
+                            <i style='font-size:24px' class='fab'>&#xf1a0;</i>
+                        </a>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
     <script src="fontawesome-free-6.4.2-web/js/all.js"></script>
     <script src="fontawesome-free-6.4.2-web/js/all.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
-
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js "></script>
 <script src="./script.js"></script>
 </body>
 
