--- a/oursevices.html
+++ b/oursevices.html
@@ -41,7 +41,7 @@
                     </li>
                     <li class="nav-item fs-6  fw-medium">
                         <a class="nav-link pe-5 text-info   link-offset-3-hover " aria-current="page"
-                            href="./pactag.html">package</a>
+                            href="./package.html">package</a>
                     </li>
                     <li class="nav-item fs-6  fw-medium">
                         <a class="nav-link pe-5   text-info   link-offset-3-hover " aria-current="page"
